Dark theme should apply dark colors to about:blank background to avoid white flashes
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox75 | --- | verified |
People
(Reporter: jaws, Assigned: evilpie)
References
(Blocks 2 open bugs)
Details
Attachments
(2 files)
Comment hidden (obsolete) |
Updated•7 years ago
|
Updated•7 years ago
|
Updated•6 years ago
|
Bug 1488384 is specifically about the white flashes due to #tabbrowser-tabpanels
which is part of the underlying browser chrome. This bug is for theming the in-content about:blank
page which is more closely related to Bug 1519547. Also since about:blank
can be set as the new tab page it is not just an issue of white flashes (Bug 1471402).
Updated•6 years ago
|
Comment 6•6 years ago
|
||
In case someone is interested in implementing this, about:blank is implemented in C++: https://searchfox.org/mozilla-central/source/netwerk/protocol/about/nsAboutBlank.cpp
Stylesheet needs to be added in two places for different parsing methods, direct about:blank pages use nsHTMLContentSink while indirect (eg about:newtab displaying about:blank) use Html5Parser and require the nsAboutBlank input stream to be filled.
Updated•5 years ago
|
Comment 10•5 years ago
|
||
This seems like an interesting defect. Would I be able to attempt it?
Comment 11•5 years ago
|
||
This seems like an interesting defect. Would I be able to attempt it?
There's a patch attached to the bug with discussion in it, which reveals some of the unexpected complexities.
Comment 12•5 years ago
|
||
I've hidden the original description, because that was talking about [blank], which was "fixed" in bug 1488384, at least if the user has the OS dark theme enabled - a distinction that seems to be generating no end of confusion. Comment 2 then morphed this bug into being about about:blank. That should be clearer now.
Updated•5 years ago
|
Comment 13•5 years ago
|
||
Is this still being reproduced?
Comment 14•5 years ago
|
||
(In reply to petcuandrei from comment #13)
Is this still being reproduced?
I'm still seeing it in Firefox Beta 73.0b6 (64-bit).
Comment 15•5 years ago
|
||
(In reply to petcuandrei from comment #13)
Is this still being reproduced?
Yes, it is! Nightly 74.0a1 (2020-01-20) (64-Bit).
Updated•5 years ago
|
Comment hidden (duplicate, obsolete) |
Comment hidden (advocacy) |
Comment 21•5 years ago
|
||
(In reply to OptionallyNamed from comment #20)
Another problem with dark theme is that the scrollbars become so dark that I cannot scroll pages. This is so counter-productive.
Please file a new bug for this.
Comment 22•5 years ago
|
||
Please file a new bug for this.
Please, file this bug for me because I am not a sofware enthusiast. please.
Assignee | ||
Comment 23•5 years ago
|
||
I think during the All Hands in Berlin you might have suggested to do this in nsPresContext::DefaultBackgroundColor,
but this seems a bit more targeted and not a header.
I haven't try tested this yet, so this more of a feedback?
Updated•5 years ago
|
Comment 24•5 years ago
|
||
(In reply to OptionallyNamed from comment #22)
Please file a new bug for this.
Please, file this bug for me because I am not a sofware enthusiast. please.
It would be helpful if you could provide a screenshot of what's wrong with the scrollbars on your side, because I'm not seeing this bug on macOS. I can't really file a bug without much context. Thanks :)
Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 25•5 years ago
|
||
Comment 26•5 years ago
|
||
bugherder |
Updated•5 years ago
|
Comment 27•5 years ago
|
||
Reproduced the issue using an affected Nightly build from 2020-02-03, on macOS 10.14.
I have verified that the dark colors are successfully applied while the OS dark theme is enabled. Tested on macOS 10.14, Ubuntu 18.04 and Windows 10 x64, running Beta 75.0b7.
Comment 28•5 years ago
|
||
I can still reproduce it in Firefox 75 on openSUSE Tumbleweed.
Assignee | ||
Comment 29•5 years ago
|
||
(In reply to Guo Yunhe from comment #28)
I can still reproduce it in Firefox 75 on openSUSE Tumbleweed.
Do you have privacy.resistFingerprinting
enabled? Somebody opened bug 1634602 that this isn't working.
Comment 30•5 years ago
|
||
(In reply to Tom Schuster [:evilpie] from comment #29)
(In reply to Guo Yunhe from comment #28)
I can still reproduce it in Firefox 75 on openSUSE Tumbleweed.
Do you have
privacy.resistFingerprinting
enabled? Somebody opened bug 1634602 that this isn't working.
No, I don't.
Updated•4 years ago
|
Comment 32•4 years ago
|
||
On mac, nightly 89, this still occurs.
Easy way to reproduce:
Holding command, click the down arrow next to any user on this page, then click "profile".
about:blank should open in a new tab with a white background, at least for a second or two before opening the profile page.
Comment 33•4 years ago
|
||
Yeah, that case is a bit harder, because that window has an opener (and thus is web-observable).